update fix sidebar responsive view on mobile

--- a/CPL/wwwroot/css/dashboard/style.css
+++ b/CPL/wwwroot/css/dashboard/style.css
@@ -1400,11 +1400,11 @@ footer {
         background-color: #ffd300;
         color: black;
     }
-/*@media screen and (min-width: 426px) {
+@media screen and (min-width: 580px) {
     #main-menu-navigation {
-        margin-left:170px;
+        margin-left: 170px;
     }
-}*/
+}
 
 .main-menu .btn-sm span {
     padding-top:.4rem;
